--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -78,3 +78,69 @@
     margin-top: 2rem;
   }
 }
+
+
+/* =========================== */
+/* ✅ Cover 전용 모달 스타일   */
+/* =========================== */
+
+.contact-modal {
+  width: 22rem;
+
+  .header {
+    .title-group {
+      text-align: center;
+
+      .title {
+        font-size: 1.2rem;
+        color: var(--theme-color);
+        padding: 0.5rem;
+      }
+
+      .subtitle {
+        font-size: 0.9rem;
+        opacity: 0.8;
+      }
+
+      padding-bottom: 1rem;
+      border-bottom: 1px solid var(--dark-grey-color);
+    }
+  }
+
+  .content {
+    padding: 0.7rem 0.7rem 1rem 0.7rem;
+
+    .contact-info {
+      padding: 1rem 0.7rem;
+      display: grid;
+      grid-template-columns: 8rem 7rem 1fr;
+      row-gap: 0.5rem;
+
+      .relation {
+        opacity: 0.7;
+      }
+
+      .icon {
+        fill: var(--dark-color);
+        margin: 0 0.5rem;
+        opacity: 0.7;
+        width: 1rem;
+        height: 1rem;
+        transition: opacity 0.2s ease;
+
+        &:hover {
+          opacity: 1;
+        }
+
+        &.flip {
+          transform: scaleX(-1);
+        }
+      }
+    }
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+  }
+}
